[package]
name = "toml-cfg"
version = "0.2.0"
description = "A procedural macro for configuring constant values across crates"
repository = "https://github.com/jamesmunns/toml-cfg"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"

license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
toml = "0.8.10"
heck = "0.4.0"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.syn]
version = "2.0.48"
features = ["full", "extra-traits"]
